# godcc

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  godcc.md  hello.c  main.cpp
IR/: IR.cpp  IR.h  irvisitor.cpp  irvisitor.h
backend/: asm.cpp  asm.h  asmgenerator.cpp  asmgenerator.h  framestack.cpp  framestack.h  register.cpp  register.h
doc/: godcc.md  osplan.md
frontend/: ast.cpp  ast.h  ast_text_view.cpp  ast_text_view.h  ast_to_ir.cpp  ast_to_ir.h  ast_tree_view.cpp  ast_tree_view.h  cst_tree_view.cpp  cst_tree_view.h  lexer.cpp  lexer.lex.cpp  parser.cpp  parser.hpp  parser.tab.cpp  parser.tab.hpp  semantic.cpp  semantic.h  sysy.l  sysy.y  visitor.cpp  visitor.h
json/: CMakeLists.txt  json.cpp  json.h  test.cpp
log/: log.cpp  log.h
mips/: 0_BubbleSort.s  1_Fibonacci.s  2_Prime.s  3_PerfectNumber.s  4_CounterClockwiseRotationArray4_4.s  5_YangHuiTriangle.s  6_QuickSort.s  7_Dijkstra.s
test/: Tparser.cpp  Tparser.h  array.c  dev.c  fab.c  hello.c  ir.c  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c
test/mytest/: array.c  test1.c  test4.c  test5.c  test6.c
test/nc_tests/: 0_BubbleSort.c  1_Fibonacci.c  2_Prime.c  3_PerfectNumber.c  5_YangHuiTriangle.c  6_QuickSort.c  7_Dijkstra.c
test/semantic/: 0_var_not_defined.c  1_var_defined_again.c  2_break_not_in_loop.c  3_func_arg_not_match.c  4_opnd_not_match.c  5_arrayaccess_out_of_bounds.c  7_func_lack_of_return.c  correct.c  while_if_condition_null.c
tools/: CMakeLists.txt  dot.cpp  dot.h  json.cpp  json.h  log.cpp  log.h  symbolTable.cpp  symbolTable.h  test.cpp
